testing/integration/error_async_stack/error_async_stack.out
Error: async
    at ./integration/error_async_stack/error_async_stack.js:5:13
    at async ./integration/error_async_stack/error_async_stack.js:4:5
    at async ./integration/error_async_stack/error_async_stack.js:9:5
[ERR] Error: async
[ERR]     at ./integration/error_async_stack/error_async_stack.js:5:13
[ERR]     at async ./integration/error_async_stack/error_async_stack.js:4:5
[ERR]     at async ./integration/error_async_stack/error_async_stack.js:9:5
