testing/integration/error_async_stack/error_async_stack.js
// Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.
(async () => {
  const p = (async () => {
    await Promise.resolve().then(() => {
      throw new Error("async");
    });
  })();
  try {
    await p;
  } catch (error) {
    console.log(error.stack);
    throw error;
  }
})();
